--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,6 @@
 body {
-  /* font-family: 'Noto Sans', sans-serif; */
-  font-family: 'century-gothic'
+  font-family: 'Noto Sans', sans-serif;
+  /* font-family: 'century-gothic' */
 }
 
 
@@ -25,8 +25,8 @@ body {
 }
 
 .teaser {
-  /* font-family: 'Google Sans', sans-serif; */
-  font-family: 'century-gothic'
+  font-family: 'Google Sans', sans-serif;
+  /* font-family: 'century-gothic' */
 }
 
 
@@ -50,13 +50,13 @@ body {
 }
 
 .publication-title {
-    /* font-family: 'Google Sans', sans-serif; */
-    font-family: 'century-gothic'
+    font-family: 'Google Sans', sans-serif;
+    /* font-family: 'century-gothic' */
   }
 
 .publication-authors {
-    /* font-family: 'Google Sans', sans-serif; */
-    font-family: 'century-gothic'
+    font-family: 'Google Sans', sans-serif;
+    /* font-family: 'century-gothic' */
   }
 
 .publication-venue {
@@ -139,7 +139,7 @@ body{
 }
 
 .posts{
-    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
 
 }
@@ -150,7 +150,7 @@ body{
   border-left: 5px solid rgb(255, 180, 240);
 }
 .xtitle{
-    /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-family: 'century-gothic';
     font-size: 30px;
     text-align: center;
@@ -252,8 +252,8 @@ a:hover:after{
 .marquee-inner p{
   /* font-weight: 600;
   font-size: 20px; */
-  /* font-family: cursive; */
-  font-family: 'century-gothic';
+  font-family: cursive;
+  /* font-family: 'century-gothic'; */
 }
 .marquee-inner.to-left{
   animation: marqueeLeft 25s linear infinite;
